--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<embed src="https://kenuiuc.github.io/resume-2025/ken_wang_resume.pdf" width="100%" height="850px"/>
+<embed src="https://kenuiuc.github.io/resume-2025/ken_wang_resume.pdf" width="100%" height="100%"/>
